Update to X_test

--- a/LogisticRegression/wineData.ipynb
+++ b/LogisticRegression/wineData.ipynb
@@ -606,7 +606,7 @@
     "- linear models for clasification perform better with higher dimensionality\n",
     "- In Sklearn implementation, the LogisticRegression applies an L2 regularization by default. Modify the C value to reduce the amount of the regularization\n",
     "\n",
-    "Author: Kavi Sekhon"
+    "Author: Kam Bansal"
    ]
   }
  ],
@@ -656,6 +656,15 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
