change model name

--- a/LinearRegression/House_Prices.ipynb
+++ b/LinearRegression/House_Prices.ipynb
@@ -351,7 +351,7 @@
    ],
    "source": [
     "# Plot our coefficient magnitude with variating markes\n",
-    "markers = ['^' if i >=0 else 'v' for i in lr_model.coef_.T]\n",
+    "markers = ['^' if i >=0 else 'v' for i in model.coef_.T]\n",
     "for i, j in enumerate(markers):\n",
     "    plt.plot(i,model.coef_[i], marker=markers[i],color='blue', linewidth=0, markersize=12)\n",
     "    plt.xticks(range(diabetes.data.shape[1]), diabetes.feature_names, rotation=90);\n",
@@ -549,10 +549,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
