change model name

--- a/LinearRegression/House_Prices.ipynb
+++ b/LinearRegression/House_Prices.ipynb
@@ -517,7 +517,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Author: Kam Bansal"
+    "#### Author: Kam Bansal."
    ]
   },
   {
