Updates to paragraphs

--- a/LinearRegression/House_Prices.ipynb
+++ b/LinearRegression/House_Prices.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span>Below is an example of a regression problem using linear regression to predict house prices from a dataset provided on Kaggle. The dataset can be found at the link below. Note that I have tried to reduce the amount of regularization found in sklearn's implementation of the model. As well as attempting to compare and contrast the performance of both statsmodel's linear regression model and sklearn's linear regression model. I try to avoid a lot of feature engineering here, as this notebook is just an example of the models</span>.\n",
+    "<span>Below is an example of a regression problem using linear regression to predict house prices from a dataset provided on Kaggle.</span>.\n",
     "\n",
     "## Import libraries "
    ]
@@ -549,10 +549,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
